# AirSim_FixedWing_GPT5

./: README.md  UnrealPluginFiles.vcxproj  UnrealPluginFiles.vcxproj.filters  build.cmd
AirLib/: AirLib.sln  AirLib.vcxproj  AirLib.vcxproj.filters
AirLib/include/api/: RpcLibAdaptorsBase.hpp
AirLib/include/common/: AirSimSettings.hpp
AirLib/include/physics/: World.hpp
AirLib/include/sensors/: SensorBase.hpp  SensorFactory.hpp
AirLib/include/sensors/pitot/: PitotBase.hpp  PitotSimple.hpp
AirLib/include/vehicles/fixedwing/api/: FixedWingApiBase.hpp  FixedWingRpcLibAdaptors.hpp  FixedWingRpcLibClient.hpp  FixedWingRpcLibServer.hpp
AirLib/src/vehicles/fixedwing/api/: FixedWingRpcLibClient.cpp  FixedWingRpcLibServer.cpp
AirLibUnitTests/: AirLibUnitTests.vcxproj
DroneServer/: DroneServer.vcxproj
DroneShell/: DroneShell.vcxproj
Examples/: Examples.vcxproj
HelloCar/: HelloCar.vcxproj
HelloDrone/: HelloDrone.vcxproj
HelloSpawnedDrones/: HelloSpawnedDrones.vcxproj
MavLinkCom/: MavLinkCom.vcxproj
MavLinkCom/MavLinkTest/: MavLinkTest.vcxproj
Unreal/Environments/Blocks/: .gitattributes  .gitignore  Blocks.uproject  README.md
Unreal/Environments/Blocks/Config/: DefaultEditor.ini
Unreal/Environments/Blocks/Examples/FixedWingCppClient/: CMakeLists.txt  README.md  main.cpp
Unreal/Environments/Blocks/Examples/FixedWingMinimalCpp/: CMakeLists.txt  main.cpp
Unreal/Environments/Blocks/Examples/Python/: fw_rpc_check.py
Unreal/Environments/Blocks/Plugins/JSBSimFlightDynamicsModel/Source/JSBSimFlightDynamicsModel/Private/: JSBSimMovementComponent.cpp
Unreal/Environments/Blocks/Plugins/JSBSimFlightDynamicsModel/Source/JSBSimFlightDynamicsModel/Public/: FDMTypes.h  JSBSimMovementComponent.h
Unreal/Environments/Blocks/scripts/: Test-AirSimPort.ps1
